# axum-nextjs-signup

./: .gitignore  README.md
backend/: .env  Cargo.toml
backend/src/: app_state.rs  base_functions.rs  database.rs  main.rs  router.rs
backend/src/mail/: mail_functions.rs  mail_info.json  mail_template.html  mod.rs
backend/src/routes/: mod.rs
backend/src/routes/users/: hash_password.rs  mod.rs  sign_up.rs  structs.rs
backend/src/routes/utils/: app_error.rs
database/: schemas.sql
frontend/: .env  next.config.js  package.json
frontend/components/: basicDialog.tsx
frontend/pages/: _app.tsx  _document.tsx  index.tsx
frontend/src/: theme.ts  types.ts
