[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
bb8 = "0.8.0"
bb8-postgres = "0.8.1"
bcrypt = "0.13.0"
dotenv = "0.15.0"
lettre = "0.10.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }
tokio-postgres = "0.7.7"
tower-http = { version = "0.3.5", features = ["cors"] }
validator = { version = "0.16.0", features = ["derive"] }
